--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,3 +74,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/DigitalCampus.UMG_SlateToControlDrawImg",NewName="/Script/DigitalCampus.UMG_SliderToControlDrawImg")
++FunctionRedirects=(OldName="/Script/DigitalCampus.UMG_SliderToControlDrawImg.thsi",NewName="/Script/DigitalCampus.UMG_SliderToControlDrawImg.OnValueChanged")
