learn cpath and add sth
f

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 /DigitalCampus/Intermediate
 /DigitalCampus/Saved
+/Content/Character_Appearance_Dissolve
+/Content/JapaneseSchool_02
