--- a/DigitalCampus.uproject
+++ b/DigitalCampus.uproject
@@ -61,6 +61,11 @@
 			"Name": "ProjectCleaner",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/4d7f5dc837fc4b009bb91e678adf9fd0"
+		},
+		{
+			"Name": "SimpleCharts",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/0ed62f4ea24a4897ae2920fe45ec11df"
 		}
 	]
 }
