--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,6 @@ ManualIPAddress=
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/DigitalCampus.UMG_SlateToControlDrawImg",NewName="/Script/DigitalCampus.UMG_SliderToControlDrawImg")
 +FunctionRedirects=(OldName="/Script/DigitalCampus.UMG_SliderToControlDrawImg.thsi",NewName="/Script/DigitalCampus.UMG_SliderToControlDrawImg.OnValueChanged")
++PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.WidgetComponent",NewName="/Script/DigitalCampus.DC_Building.BuildingMainWidgetComponent")
++PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.AddedWidget",NewName="/Script/DigitalCampus.DC_Building.AddedWidgetComponent")
++FunctionRedirects=(OldName="/Script/DigitalCampus.DC_Building.AddWidget",NewName="/Script/DigitalCampus.DC_Building.JFAddWidget")
