--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,3 +81,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.WidgetComponent",NewName="/Script/DigitalCampus.DC_Building.BuildingMainWidgetComponent")
 +PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.AddedWidget",NewName="/Script/DigitalCampus.DC_Building.AddedWidgetComponent")
 +FunctionRedirects=(OldName="/Script/DigitalCampus.DC_Building.AddWidget",NewName="/Script/DigitalCampus.DC_Building.JFAddWidget")
++PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.BuildingHeight",NewName="/Script/DigitalCampus.DC_Building.DefaultBuildingHeight")
++PropertyRedirects=(OldName="/Script/DigitalCampus.MyDefaultPawn.BuildingComponent",NewName="/Script/DigitalCampus.MyDefaultPawn.BuildingStaticMeshComponent")
