BindButton->OnClick(from bp to Cpp)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,3 +83,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/DigitalCampus.DC_Building.AddWidget",NewName="/Script/DigitalCampus.DC_Building.JFAddWidget")
 +PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.BuildingHeight",NewName="/Script/DigitalCampus.DC_Building.DefaultBuildingHeight")
 +PropertyRedirects=(OldName="/Script/DigitalCampus.MyDefaultPawn.BuildingComponent",NewName="/Script/DigitalCampus.MyDefaultPawn.BuildingStaticMeshComponent")
++PropertyRedirects=(OldName="/Script/DigitalCampus.DC_Building.LengthOfSplit",NewName="/Script/DigitalCampus.DC_Building.LengthOfSplitBuildingOut")
