ChangeToControllerRotation,then SycWeatherUMG

--- a/DigitalCampus.uproject
+++ b/DigitalCampus.uproject
@@ -66,6 +66,14 @@
 			"Name": "SimpleCharts",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/0ed62f4ea24a4897ae2920fe45ec11df"
+		},
+		{
+			"Name": "TimedDataMonitor",
+			"Enabled": true
+		},
+		{
+			"Name": "OpenCV",
+			"Enabled": true
 		}
 	]
 }
