--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,10 @@ DerivedDataCache/*
 /DigitalCampus/Saved
 /Content/Character_Appearance_Dissolve
 /Content/JapaneseSchool_02
+/Content/Test
+/MegaMagicVFXBundle
+/UltraDynamicSky
+/Plugins
+/222
+/Content/MegaMagicVFXBundle
+/Content/UltraDynamicSky
