--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ DerivedDataCache/*
 /DigitalCampus/Saved
 /Content/Character_Appearance_Dissolve
 /Content/JapaneseSchool_02
+/Content/MegaMagicVFXBundle
+/Content/UltraDynamicSky
+/222
+/Plugins
